# HomeHeating

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: FOPDT.ipynb
homeheating/: FOPDT_model.py  __init__.py  heating_model.py
tests/: conftest.py  test_FOPDT_model.py  test_heatingmodel_class.py
