[tool.poetry]
name = "homeheating"
version = "0.1.0"
description = "A simple home heating model to practice system identification and control concepts"
authors = ["IsaacSavona <isaacsavona@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"
pytest = "^8.3.3"
gekko = "^1.2.1"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
